--- a/Estilos/Estilos.xaml
+++ b/Estilos/Estilos.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Espaciados" >
+
+   <Style x:Key="Espaciado">
         <Setter Property="Control.Margin" Value="10" />
     </Style>
-    <Style x:Key="Derecha" >
-        <Setter Property="Control.HorizontalAlignment" Value="Right" />
+
+    <Style x:Key="BotonesStackPanel" BasedOn="{StaticResource Espaciado}">
+        <Setter Property="Control.Width" Value="80"/>
     </Style>
 
 </ResourceDictionary>
